# slurm

./: configure  configure.ac  slurm.spec
auxdir/: x_ac_criu.m4  x_ac_dmtcp.m4  x_ac_multicheckpoint.m4
doc/man/man8/: spank.8
slurm/: slurm.h.in  spank.h
src/: Makefile.am
src/common/: checkpoint.h  plugstack.c  read_config.c  slurm_protocol_pack.c
src/plugins/checkpoint/: Makefile.am
src/plugins/checkpoint/criu/: Makefile.am  checkpoint_criu.c  cr_checkpoint.sh.in  cr_restart.sh.in
src/plugins/checkpoint/dmtcp/: Makefile.am  checkpoint_dmtcp.c  cr_checkpoint.sh.in  cr_common.sh.in  cr_restart.sh.in  cr_start.sh.in  spank_dmtcp.c
src/plugins/checkpoint/multicheckpoint/: Makefile.am  checkpoint_multicheckpoint.c  cr_checkpoint.sh.in  cr_common.sh.in  cr_restart.sh.in  cr_start.sh.in  spank_multicheckpoint.c
src/plugins/node_features/knl_generic/: node_features_knl_generic.c
src/plugins/sched/: Makefile.am
src/plugins/sched/migration/: Makefile.am  migration.c  migration.h  migration_wrapper.c
src/plugins/sched/migration_compact/: Makefile.am  migration.c  migration_wrapper.c
src/plugins/sched/migration_prio/: Makefile.am  migration.c  migration_wrapper.c
src/plugins/select/cons_res/: job_test.c
src/plugins/select/serial/: job_test.c
src/plugins/slurmctld/: Makefile.am
src/plugins/slurmctld/job_migration/: Makefile.am  Makefile.in  job_migration.c  job_migration.h
src/plugins/slurmctld/migration/: Makefile.am  migration.c  migration.h
src/sdiag/: sdiag.c
src/slurmctld/: job_mgr.c  job_scheduler.c  node_scheduler.c  slurmctld.h  statistics.c
src/smigrate/: Makefile.am  opt.c  opt.h  smigrate.c
testplugin/: TODO  helloWorld.c
