SUBDIRS =		\
	api		\
	bcast		\
	common		\
	database	\
	db_api		\
	layouts		\
	plugins		\
	sacct		\
	sacctmgr	\
	salloc		\
	sattach		\
	sbatch		\
	sbcast		\
	scancel		\
	scontrol	\
	sdiag		\
	sinfo		\
	slurmctld	\
	slurmd		\
	slurmdbd	\
	smap		\
	smd		\
	smigrate \
	sprio		\
	squeue		\
	sreport		\
	srun		\
	srun_cr		\
	sshare		\
	sstat		\
	strigger	\
	sview
